Tests/RunCMake/CMakePresets/JSONParseError-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/JSONParseError:
A JSON document cannot be empty
